--- a/www/composer.json
+++ b/www/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "rumnwwx/mvcpractik",
+    "name": "rumnwwx/mvc_practos",
     "description": "mvc framework",
     "type": "project",
     "license": "MIT",
